fixed homepage spacing

--- a/wp-content/themes/themer/slider/css/slider.css
+++ b/wp-content/themes/themer/slider/css/slider.css
@@ -108,6 +108,12 @@ Main components
   margin-bottom: 1em;
   padding: 0 14px;
 }
+@media only screen and (max-width: 765px) {
+  .cd-testimonials p {
+    font-size: 16px;
+    /*font-size: 1.375rem;*/
+  }
+}
 @media only screen and (min-width: 765px) {
   .cd-testimonials p {
     font-size: 22px;
